Add scenario library feature page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <a href="#analytics">Analytics</a>
           <a href="#liquidity">Liquidity</a>
           <a href="#roadmap">Roadmap</a>
+          <a href="scenario-library.html">Scenario Library</a>
         </div>
         <button class="nav-cta">Request Demo</button>
       </nav>
@@ -312,6 +313,7 @@
         <a href="#analytics">Analytics</a>
         <a href="#liquidity">Liquidity</a>
         <a href="#roadmap">Roadmap</a>
+        <a href="scenario-library.html">Scenario Library</a>
       </div>
       <small>© 2025 EndowmentOS. All rights reserved.</small>
     </footer>
