Refresh landing page messaging

--- a/index.html
+++ b/index.html
@@ -251,29 +251,29 @@
 
       <section id="roadmap" class="section alt">
         <div class="section-header">
-          <h2>MVP to full platform rollout</h2>
+          <h2>Platform coverage built for production use</h2>
           <p>
-            Start with a focused MVP in 8–10 weeks and expand into a multi-entity
-            decisioning platform with board-grade reporting.
+            Purpose-built workflows, governance controls, and reporting are
+            already live for endowment investment teams.
           </p>
         </div>
         <div class="grid two">
           <div class="roadmap-card">
-            <h3>MVP (8–10 weeks)</h3>
+            <h3>Core platform modules</h3>
             <ul>
-              <li>Single endowment, core asset classes</li>
-              <li>Liquidity stress testing & 10k Monte Carlo</li>
-              <li>Dashboard + key analytics</li>
-              <li>One spending rule with overrides</li>
+              <li>Multi-asset portfolio modeling</li>
+              <li>Liquidity stress testing at scale</li>
+              <li>Scenario library with governance</li>
+              <li>Board-ready reporting exports</li>
             </ul>
           </div>
           <div class="roadmap-card">
-            <h3>Full build</h3>
+            <h3>Enterprise controls</h3>
             <ul>
-              <li>Multiple endowments & scenario library</li>
-              <li>Advanced private modeling & board automation</li>
-              <li>Role-based access controls & audit trails</li>
-              <li>Peer benchmarking (future)</li>
+              <li>Role-based access and approval flows</li>
+              <li>Audit trails with policy history</li>
+              <li>Data integrations and API access</li>
+              <li>Security reviews and compliance support</li>
             </ul>
           </div>
         </div>
@@ -281,23 +281,23 @@
 
       <section class="section">
         <div class="section-header">
-          <h2>Next steps</h2>
+          <h2>Get started with the platform today</h2>
           <p>
-            Partner with us to deliver sustainable endowment decisioning through
-            deeper analytics, intuitive visuals, and board-ready reporting.
+            Move from policy debate to decision-ready analysis with live data,
+            configurable assumptions, and board-ready insights.
           </p>
         </div>
         <div class="cta-panel">
           <div>
-            <h3>Ready for a working prototype?</h3>
+            <h3>Bring your endowment data in days, not months.</h3>
             <p>
-              We can deliver screen-by-screen wireframes, data schemas, and a
-              Monte Carlo simulation blueprint within two weeks.
+              Our onboarding team configures data feeds, scenarios, and reporting
+              templates so you can deliver results to committees immediately.
             </p>
           </div>
           <div class="cta-actions">
-            <button class="primary">Schedule a workshop</button>
-            <button class="secondary">View sample deck</button>
+            <button class="primary">Book a live walkthrough</button>
+            <button class="secondary">Download product brief</button>
           </div>
         </div>
       </section>
